--- a/Invest_Portfolio/Invest_Portfolio.csproj
+++ b/Invest_Portfolio/Invest_Portfolio.csproj
@@ -94,8 +94,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Resource Include="Resources\Fon.jpg" />
+    <Resource Include="Resources\Icone.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
